server/compilers/goLiteJS/src/test/ml2/valid/trivial1.go
// trivially typed statements
package main

func main() {
    for {
        continue
    }

    for {
        break
    }

    switch {
        default:
    }
}
