server/compilers/goLiteJS/src/test/ml2/invalid/ml2func2.go
package main


func f1() {


}

func f2() {} 
//Function redefinition
func f2() {}
